<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".Logins.Login">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="80dp"
            >

        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/forgotpass_act_iv_health"
            android:layout_width="170dp"
            android:layout_height="160dp"
            android:contentDescription="@string/image_desc_start"
            app:srcCompat="@drawable/start_codex"
            tools:ignore="ImageContrastCheck" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/forgotpass_act_tv_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/reset_password"
            android:textColor="@color/text_color"
            android:textSize="40sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:paddingTop="20dp">


            <TextView
                android:id="@+id/forgotpass_act_tv_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/enter_mail"
                android:textColor="@color/text_color"
                android:textSize="17sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forgotpass_act_et_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:textColorHint="@color/text_color"
                app:boxStrokeColor="@color/red"
                app:errorIconDrawable="@null"
                app:hintTextColor="@color/text_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_color"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/forgotpass_act_bt_sendlink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/light_red"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/send_link"
                android:textAlignment="center"
                android:textColor="@color/text_color2"
                android:textSize="18sp"
                app:cornerRadius="25dp"
                tools:ignore="TextContrastCheck" />

            <ProgressBar
                android:id="@+id/forgotpass_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:progressTint="@color/text_color"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>